tests/expectations/parser/functions/public_const_param_fail.out
Error [EPAR0370005]: expected an identifier -- found 'const'
    --> test:4:21
     |
   4 | fn x(x: u32, public const y: i32) {
     |                     ^^^^^
